--- a/web/css/default.css
+++ b/web/css/default.css
@@ -61,6 +61,13 @@ h3 a {text-decoration: none;}
 h1 a.btn-primary, .pull-right .btn-primary, .pull-right .btn-danger, .pull-right .btn-default,
 .btn-primary.pull-right, .btn-danger.pull-right, .btn-default.pull-right {margin-right: 0px; margin-left: 10px;}
 
+.menu {background: #333; color: white; min-height: 100%;;}
+.menu > div {width: 200px; padding: 30px 0; margin: 0 auto;}
+.menu > div a {color: white; text-decoration: none; display: block; margin: 0px auto; padding: 10px 0 10px 55px;}
+.menu > div a .img {background-repeat: no-repeat; background-position: center center; position: absolute; width: 25px; height: 25px; margin-left: -45px;}
+
+
+
 h1 .btn-primary {font-size: 12px; line-height: 1.5em; margin-top: 5px; float: right; }
 @media (max-width: 800px) {
     h1 .btn-primary {position: absolute; right: 20px; top: 15px;}
@@ -265,8 +272,15 @@ body.iOS .icons {
     left: auto!important; 
     right: 0!important; 
     width: 200px!important; 
-    border-left: 1px solid silver;
-    color: gray;
+    border-left: 1px solid silver!important;
+    color: gray!important;
+    font-size: 14px!important;
+    line-height: 1.4em!important;
+}
+#debugger-bar a {
+    display: inline!important; 
+    padding: 0!important; 
+    color: gray!important;
 }
 
 
