--- a/pages/invoices/edit(admin).phtml
+++ b/pages/invoices/edit(admin).phtml
@@ -18,12 +18,18 @@
 		<span class="help-block"><?php if (isset($errors['invoices[date]'])) e($errors['invoices[date]']); ?></span>
 	</div>
 
+	<div class="form-group <?php e(isset($errors['invoices[sent]'])?'has-error':''); ?>">
+		<label class="control-label" for="invoices[sent]">Sent</label>
+		<input class="form-control" name="invoices[sent]" type="date" value="<?php e($data['invoices']['sent']); ?>" id="invoices[sent]" />
+		<span class="help-block"><?php if (isset($errors['invoices[sent]'])) e($errors['invoices[sent]']); ?></span>
+	</div>
+
 	<div class="form-group <?php e(isset($errors['invoices[paid]'])?'has-error':''); ?>">
         <label class="control-label" for="invoices[paid]">Paid</label>
         <input class="form-control" name="invoices[paid]" type="date" value="<?php e($data['invoices']['paid']); ?>" id="invoices[paid]" />
         <span class="help-block"><?php if (isset($errors['invoices[paid]'])) e($errors['invoices[paid]']); ?></span>
     </div>
-	
+
 	<br/>
   
 	<div class="form-group">
