--- a/pages/deliveries/edit(admin).phtml
+++ b/pages/deliveries/edit(admin).phtml
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h3><a href="/">Home</a> / <a href="deliveries">deliveries</a></h3>
+	<h3><a href="/">Home</a> / <a href="deliveries">Deliveries</a></h3>
   	<h1>Edit deliveries</h1>
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
