--- a/pages/deliveries/view(admin).phtml
+++ b/pages/deliveries/view(admin).phtml
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3><a href="/">Home</a> / <a href="deliveries">deliveries</a></h3>
+  <h3><a href="/">Home</a> / <a href="deliveries">Deliveries</a></h3>
   <h1><?php $data['deliveries']['name'] ? e($data['deliveries']['name']) : e('Untitled');?></h1>
 </div>
 <div>
