--- a/pages/invoices/edit(admin).phtml
+++ b/pages/invoices/edit(admin).phtml
@@ -18,6 +18,12 @@
 		<span class="help-block"><?php if (isset($errors['invoices[date]'])) e($errors['invoices[date]']); ?></span>
 	</div>
 
+	<div class="form-group <?php e(isset($errors['invoices[name]'])?'has-error':''); ?>">
+		<label class="control-label" for="invoices[name]">Name</label>
+		<input class="form-control" name="invoices[name]" type="text" value="<?php e($data['invoices']['name']); ?>" id="invoices[name]" />
+		<span class="help-block"><?php if (isset($errors['invoices[name]'])) e($errors['invoices[name]']); ?></span>
+	</div>
+
 	<div class="form-group <?php e(isset($errors['invoices[sent]'])?'has-error':''); ?>">
 		<label class="control-label" for="invoices[sent]">Sent</label>
 		<input class="form-control" name="invoices[sent]" type="date" value="<?php e($data['invoices']['sent']); ?>" id="invoices[sent]" />
