--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Statistics</h1>
 
-<p>You currently receive &euro; <?php e(round($subscriptionIncome)); ?> per month from subscriptions.<br />In total you have received &euro; <?php e(round($incomeThisYear)); ?> this year. You are expected to receive an additional &euro; <?php e(round($incomeThisYearAddon)); ?>.<p>
+<p>You currently receive &euro; <?php e(round($subscriptionIncome)); ?> per month from subscriptions.<br />In total you have received &euro; <?php e(round($incomeThisYear)); ?> this year.<br />You are expected to receive an additional &euro; <?php e(round($incomeThisYearAddon)); ?>.<p>
 
 <p>Last year you received &euro; <?php e(round($incomeLastYear)); ?>. Note that all these amounts are without VAT.</p>
 <br />
