--- a/pages/statistics(admin).phtml
+++ b/pages/statistics(admin).phtml
@@ -2,9 +2,8 @@
 <h3>Home</h3>
 <h1>Statistics</h1>
 
-<p>You currently receive &euro; <?php e(round($subscriptionIncome)); ?> per month from subscriptions.<br />In total you have received &euro; <?php e(round($incomeThisYear)); ?> this year.<br />You are expected to receive an additional &euro; <?php e(round($incomeThisYearAddon)); ?>.<p>
+<p>You currently receive <?php e(round($subscriptionIncome)); ?> euro per month from subscriptions.<br />Your <?php e(date('Y')); ?> invoice total is <?php e(round($incomeThisYear/1000,1)); ?>k euro and you have <?php e(round($incomeThisYearAddon/1000,1)); ?>k euro of uninvoiced work.<br />This creates a total of <?php e(round(($incomeThisYear + $incomeThisYearAddon)/1000,1)); ?>k euro. Last year you received <?php e(round($incomeLastYear/1000,1)); ?>k euro.<p>
 
-<p>Last year you received &euro; <?php e(round($incomeLastYear)); ?>. Note that all these amounts are without VAT.</p>
 <br />
 <div>
 <?php if($sumhourspertype_thisyear) { ?>
