--- a/web/css/default.css
+++ b/web/css/default.css
@@ -54,7 +54,7 @@ h2 {font-size: 30px; margin-bottom: 30px; line-height: 1em; font-weight: 700; le
 h3 {font-size: 14px; margin-bottom: 5px; line-height: 1.2em; font-weight: 700;}
 * + h3 {margin-top: 30px;}
 * + h2 {margin-top: 60px;}
-.btn-primary, .btn-danger, .btn-default {margin-right: 10px; display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 3px; text-decoration: none; cursor: pointer;}
+.btn-primary, .btn-danger, .btn-default {margin-right: 10px; display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 3px; text-decoration: none; cursor: pointer; text-decoration: none!important;}
 
 
 .btn-default, .btn-danger {background: white; color: #18b663!important;}
@@ -254,7 +254,7 @@ thead tr:last-child {border-bottom: 1px solid rgba(0,0,0,0.05);}
 .dot {border-radius: 100%; width: 0px; height: 0px; background: #18b663; display: inline-block; margin-right: 10px; position: relative; bottom: 1px; overflow: hidden; padding: 8px 0 0 8px; font-size: 11px;}
 .money span.dot:before {content: none;}
 
-
+.main div p a {color: #18b663; text-decoration: underline;}
 
 
 
