--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Dashboard</h1>
 
-<p>Your <?php e(date('Y')); ?> invoice total is <?php e(round($incomeThisYear/1000,1)); ?>k euro.<br />Why don't you look at your <a href="/statistics">statistics</a> or <a href="/invoices/add">add an invoice</a>?</p>
+<p>Your <?php e(date('Y')); ?> invoice total is <?php e(round($incomeThisYear/1000,1)); ?>k euro.<br />For more information you can look at your <a href="/statistics">statistics</a>.</p>
 
 <br />
 
@@ -58,7 +58,7 @@
 
                 <?php if(isset($uninvoiced_hours)) {
                     foreach ($uninvoiced_hours as $row): ?>
-                    <tr class="hover" onclick="window.location.href='hours/view/<?php e($row['hours']['id']);?>';" title="Hours need invoice">
+                    <tr class="hover" onclick="window.location.href='invoices/add/<?php e($row['hours']['customer_id']);?>';" title="Hours need invoice">
                         <td class="name"><span><a class="dot">invoice</a><?php e($row['hours']['name']); ?></span></td>
                         <td class="money"><span><?php e($row['hours']['subtotal']); ?></span></td>
                     </tr>
@@ -67,7 +67,7 @@
 
                 <?php if(isset($uninvoiced_subscriptions)) {
                     foreach ($uninvoiced_subscriptions as $row): ?>
-                    <tr class="hover" onclick="window.location.href='subscriptions/view/<?php e($row['subscriptions']['id']);?>';" title="Subscription needs invoice">
+                    <tr class="hover" onclick="window.location.href='invoices/add/<?php e($row['subscriptions']['customer_id']);?>';" title="Subscription needs invoice">
                         <td class="name"><span><a class="dot">invoice</a><?php e($row['subscriptions']['name']); ?></span></td>
                         <td class="money"><span><?php e($row['subscriptions']['fee']); ?></span></td>
                     </tr>
@@ -76,7 +76,7 @@
 
                 <?php if(isset($uninvoiced_deliveries)) {
                     foreach ($uninvoiced_deliveries as $row): ?>
-                    <tr class="hover" onclick="window.location.href='deliveries/view/<?php e($row['deliveries']['id']);?>';" title="Delivery needs invoice">
+                    <tr class="hover" onclick="window.location.href='invoices/add/<?php e($row['deliveries']['customer_id']);?>';" title="Delivery needs invoice">
                         <td class="name"><span><a class="dot">invoice</a><?php e($row['deliveries']['name']); ?></span></td>
                         <td class="money"><span><?php e($row['deliveries']['subtotal']); ?></span></td>
                     </tr>
